[package]
name = "winserial"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
native-windows-derive = "1.0.5"
native-windows-gui = { version = "1.0.13", features = [
    "notice",
    "listbox",
    "menu",
] }
serialport = "4.4.0"

[profile.release]
strip = true
